crates/semantics/src/operation_import_resolver/tests/snapshots/nitrogql_semantics__operation_import_resolver__tests__multiple_imports.snap
---
source: crates/semantics/src/operation_import_resolver/tests/mod.rs
expression: print_document(&resolved)
---
query Foo {
  foo {
    ... Frag1
    ... Frag3
  }
}
fragment Frag1 on Foo {
  bar
}
fragment Frag3 on Foo {
  baz
}

