crates/semantics/src/operation_import_resolver/tests/snapshots/nitrogql_semantics__operation_import_resolver__tests__transitive_import.snap
---
source: crates/semantics/src/operation_import_resolver/tests/mod.rs
expression: print_document(&resolved)
---
query Foo {
  foo {
    ... Frag2
  }
}
fragment Frag3 on Foo {
  baz
}
fragment Frag2 on Foo {
  bar
  ... Frag3
}

